Revert to RAM percentage settings